# OpenDRIVE

./: .gitignore  CMakeLists.txt  OpenDriveConfig.h.in  README.md  bootstrap.sh  setup_opencv.sh  teamscale_plugin_mappings.properties  upload_coverage.sh
app/: CMakeLists.txt  Converter.cpp
examples/: CMakeLists.txt  CreateCSV.cpp  CreateYAML.cpp  PrintCameraGoogleLink.cpp  PrintGoogleLinks.cpp  SampleLanes.cpp  basicOpendrive16Loading.cpp
include/OpenDRIVE/: CubicPolynom.hpp  CubicPolynomWrapper.hpp  Elevation.hpp  ElevationBase.hpp  Formatter.hpp  Geometry.hpp  HDMap.hpp  HDMapFactory.hpp  Lane.hpp  LaneSection.hpp  Lanes.hpp  Object.hpp  OpenDriveWrapper.hpp  ParamPoly3.hpp  Projector.hpp  Road.hpp  RoadMark.hpp  Shape.hpp  SuperElevation.hpp  Vector.hpp
include/OpenDRIVE/opendrive_1_4/: Elevation.hpp  FactoryMethods.hpp  Geometry.hpp  HDMap.hpp  Object.hpp  Road.hpp  Shape.hpp  SuperElevation.hpp
include/OpenDRIVE/opendrive_1_6/: Elevation.hpp  FactoryMethods.hpp  Geometry.hpp  HDMap.hpp  Object.hpp  Road.hpp  Shape.hpp  SuperElevation.hpp
include/OpenDRIVE/utils/: ArrayUtils.hpp  CubicPolynom.hpp  Formatter.hpp  LongLatProjector.hpp  Projector.hpp  Vector.hpp
lib/: CMakeLists.txt  CMakeLists.txt.in  Core.cpp  Core.h  Elevation.cpp  Elevation.hpp  Formatter.cpp  Formatter.hpp  GeoReference.cpp  GeoReference.hpp  Geometry.cpp  Geometry.hpp  HDMap.cpp  HDMap.hpp  Header.cpp  Header.hpp  Junction.cpp  Junction.h  Lane.cpp  Lane.h  Object.cpp  Object.h  Object.hpp  OpenDriveWrapper.cpp  OpenDriveWrapper.hpp  ParamPoly3.cpp  ParamPoly3.hpp  Point.cpp  Point.hpp  Projector.cpp  Projector.hpp  README.md  Railroad.cpp  Railroad.h  Road.cpp  Road.h  Road.hpp  Shape.cpp  Shape.hpp  Signal.cpp  (+7 more)
lib/standard/: .gitignore  CMakeLists.txt  bootstrap.sh  opendrive_16_core.cxx  opendrive_16_core.hxx  opendrive_16_junction.cxx  opendrive_16_junction.hxx  opendrive_16_lane.cxx  opendrive_16_lane.hxx  opendrive_16_object.cxx  opendrive_16_object.hxx  opendrive_16_railroad.cxx  opendrive_16_railroad.hxx  opendrive_16_road.cxx  opendrive_16_road.hxx  opendrive_16_signal.cxx  opendrive_16_signal.hxx
misc/: CMakeLists.txt  highway_center.xodr  highway_north.xodr  map_snippet.xodr  objects.yaml  test.csv  test_map_opendrive_1_6.xodr
run/: CMakeLists.txt
src/: CMakeLists.txt  CubicPolynom.cpp  CubicPolynomWrapper.cpp  Elevation.cpp  ElevationBase.cpp  Formatter.cpp  Geometry.cpp  HDMap.cpp  HDMapFactory.cpp  Lane.cpp  LaneSection.cpp  Lanes.cpp  Object.cpp  OpenDriveWrapper.cpp  ParamPoly3.cpp  Projector.cpp  Road.cpp  RoadMark.cpp  Shape.cpp  SuperElevation.cpp  Vector.cpp
src/opendrive_1_4/: Elevation.cpp  FactoryMethods.cpp  Geometry.cpp  HDMap.cpp  Object.cpp  Road.cpp  Shape.cpp  SuperElevation.cpp
src/opendrive_1_6/: Elevation.cpp  FactoryMethods.cpp  Geometry.cpp  HDMap.cpp  Object.cpp  Road.cpp  Shape.cpp  SuperElevation.cpp
src/utils/: ArrayUtils.cpp  CubicPolynom.cpp  Formatter.cpp  LongLatProjector.cpp  Projector.cpp  Vector.cpp
standalone/: CMakeLists.txt  Converter.cpp
test/: ArrayUtilsTests.cpp  CMakeLists.txt  ConverterTests.cpp  ElevationTests.cpp  FormatterTests.cpp  GeometryTests.cpp  HDMapTests.cpp  HDMapTests.hpp  LanesTests.cpp  ObjectTests.cpp  OpenDriveTests.cpp  OpenDriveTests.hpp  ParsingTests.cpp  ProjectorTests.cpp  RoadTests.cpp  VectorTests.cpp
test/opendrive_1_4/: ParseOpenDrive14Tests.cpp
test/opendrive_1_6/: ParseOpenDrive16Tests.cpp
