cmake_minimum_required(VERSION 3.10)

########################################################################################################################
### Project definition ###
########################################################################################################################
project(OpenDRIVE C CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")

option(WITH_TESTS "Compile with tests." OFF)

########################################################################################################################
### External Dependencies ###
########################################################################################################################
add_subdirectory(extern)

########################################################################################################################
### Standalone App ###
########################################################################################################################
add_subdirectory(app)

########################################################################################################################
### Library ###
########################################################################################################################
add_subdirectory(src)

########################################################################################################################
### Executables ###
########################################################################################################################
add_subdirectory(examples)

########################################################################################################################
### Miscellaneous ###
########################################################################################################################
add_subdirectory(misc)

########################################################################################################################
### Testing ###
########################################################################################################################
if (WITH_TESTS)
    enable_testing()
    add_subdirectory(test)
endif ()