cmake_minimum_required(VERSION 3.10)

########################################################################################################################
### Project definition ###
########################################################################################################################
project(OpenDRIVE C CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
include(CMakeDependentOption)

option(WITH_TESTS "Compile with tests." OFF)

option(OPENDRIVE_1_6 "Use version 1.6 of the OpenDrive standard." ON)

configure_file(OpenDriveConfig.h.in OpenDriveConfig.h)

########################################################################################################################
### External Dependencies ###
########################################################################################################################
add_subdirectory(extern)

########################################################################################################################
### Standalone App ###
########################################################################################################################
add_subdirectory(app)

########################################################################################################################
### Library ###
########################################################################################################################
add_subdirectory(src)

########################################################################################################################
### Executables ###
########################################################################################################################
add_subdirectory(examples)

########################################################################################################################
### Miscellaneous ###
########################################################################################################################
add_subdirectory(misc)

########################################################################################################################
### Testing ###
########################################################################################################################
if (WITH_TESTS)
    enable_testing()
    add_subdirectory(test)
endif ()