cmake_minimum_required(VERSION 3.15)

########################################################################################################################
### Project definition ###
########################################################################################################################
project(OpenDRIVE C CXX)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")


option(WITH_TESTS "Compile with tests." OFF)

option(OPENDRIVE_1_4 "Use version 1.4 of the OpenDrive standard." OFF)
option(OPENDRIVE_1_6 "Use version 1.6 of the OpenDrive standard." OFF)

configure_file(OpenDriveConfig.h.in OpenDriveConfig.h)

########################################################################################################################
### External Dependencies ###
########################################################################################################################
add_subdirectory(extern)

########################################################################################################################
### Standalone App ###
########################################################################################################################
add_subdirectory(app)

########################################################################################################################
### Library ###
########################################################################################################################
add_subdirectory(src)

########################################################################################################################
### Executables ###
########################################################################################################################
add_subdirectory(examples)

########################################################################################################################
### Miscellaneous ###
########################################################################################################################
add_subdirectory(misc)

########################################################################################################################
### Testing ###
########################################################################################################################
if (WITH_TESTS)
    enable_testing()
    add_subdirectory(test)
endif ()