cmake_minimum_required(VERSION 3.10)

########################################################################################################################
### Packages ###
########################################################################################################################

########################################################################################################################
### Executables ###
########################################################################################################################
#
#add_executable(VisualizeFeatureDetection VisualizeFeatureDetection.cpp Commons.cpp)
#target_link_libraries(VisualizeFeatureDetection PUBLIC libCameraStabilization ${OpenCV_LIBS} ${Boost_LIBRARIES})
#target_include_directories(VisualizeFeatureDetection PUBLIC "${PROJECT_BINARY_DIR}")
